@@ -220,6 +220,7 @@ Tags:
   vecfirstidx { ... } @list           return first index that evals true
   vecmex(@list)                       return least non-neg value not in list
   vecpmex(@list)                      return least positive value not in list
+  vecsample(k,@list)                  return k random elements of list
 
   toset(\@A)                          convert to unique sorted integer list
   setinsert(\@A,$v)                   insert integer v into integer set A
